<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <item android:title="@string/compte" android:id="@+id/compte" >
        <menu>
            <item  android:id="@+id/notification"
                android:title="@string/notification"/>
            <item  android:id="@+id/rdv"
                android:title="@string/rendez_vous_et_calendrier"/>
            <item  android:id="@+id/help"
                android:title="@string/aide_et_contact"/>
        </menu>
    </item>

    <item android:title="@string/parametres" android:id="@+id/paramaters">
        <menu>
            <item  android:id="@+id/language"
                android:title="@string/language"/>

        </menu>
    </item>

<group android:checkableBehavior="single">
    <item
        android:id="@+id/security"
        android:title="@string/securite"/>
    <item
        android:id="@+id/about"
        android:title="@string/propos_de"/>
    <item
        android:id="@+id/logout"
        android:title="@string/se_deconnecter"/>


</group>




</menu>