<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctor.DoctorHomeActivity"
    android:background="#f1f1f1"
    >

    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_240sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_background_1"
        >
        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/profile_icon_2"
            android:layout_margin="@dimen/_10sdp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/language"
            android:fontFamily="@font/nexabold"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_27sdp"
            android:layout_marginHorizontal="@dimen/_23sdp"
            android:textColor="@color/blue"
            />

        <TextView
            android:id="@+id/welcomeDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenu_docteur"
            android:layout_below="@+id/profilePic"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nexabold"
            android:textSize="@dimen/_20sdp"
            />
        <TextView
            android:id="@+id/label"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:text="@string/nous_esp_rons_que_vous_aurez_une_meilleure_exp_rience_avec_nous"
            android:layout_below="@+id/welcomeDoc"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nexa_light"
            android:textSize="@dimen/_12sdp"
            android:textAlignment="center"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.78"

        >

        <LinearLayout
            android:id="@+id/goToProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_30sdp"
            >


            <TextView
                android:id="@+id/profileNav"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_13sdp"
                android:fontFamily="@font/nexabold"
                android:text="@string/aller_ton_profil"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp"
                app:drawableStartCompat="@drawable/ic_baseline_arrow_left_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personnalisez_votre_profil_et_engagez_vous_pour_de_nouvelles_demandes"
                 android:layout_marginHorizontal="@dimen/_25sdp"
                android:fontFamily="@font/nexa_light"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_90sdp"
            android:layout_marginVertical="@dimen/_40sdp"
            >
            <TextView
                android:id="@+id/roomNav"
                android:layout_width="@dimen/_221sdp"
                android:layout_height="@dimen/_13sdp"
                android:fontFamily="@font/nexabold"
                android:text="@string/commencez_utiliser_notre_application"
                android:textColor="@color/blue"
                android:textSize="@dimen/_11ssp"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_right_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ils_attendent_visiter_les_salles_et_contr_ler_votre_travail"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:fontFamily="@font/nexa_light"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                />

        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:id="@+id/links"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="horizontal"
        android:background="@drawable/white_button"

       >

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/home_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_10sdp"
            />
        <TextView
            android:id="@+id/homeNav"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_16sdp"
            android:fontFamily="@font/nexabold"
            android:text="@string/accueil"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp"
            android:layout_gravity="center_vertical"
           />

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/rooms_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_20sdp"
            />
        <TextView
            android:id="@+id/roomsNav"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_16sdp"
            android:fontFamily="@font/nexabold"
            android:text="@string/sales"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp"
            android:layout_gravity="center_vertical"
            />





    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>