<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctor.DoctorActionsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_de_contr_le"
        android:fontFamily="@font/nexabold"
        android:textColor="@color/blue"
        android:textSize="@dimen/_20ssp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/organiser_votre_travail"
        android:textSize="@dimen/_14ssp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/calenderNav"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_3sdp"
            android:background="@drawable/circle_transparent"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/calendar_2"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendrier"
                android:textColor="@color/black"
                android:fontFamily="@font/nexa_light"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center"
            android:background="@drawable/bg_signin_btn"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:src="@drawable/plus1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actions"
                android:textColor="@color/white"
                android:fontFamily="@font/nexa_light"
                />

        </LinearLayout>



    </LinearLayout>


        <TextView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/custom_background_transparent"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"/>

        <TextView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/custom_background_transparent"
            />


    </LinearLayout>

</FrameLayout>