<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.SecurityStepFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_informations"
                    android:textColor="@color/blueBack"
                    android:textSize="@dimen/_22ssp"
                    android:textAlignment="center"
                    android:fontFamily="@font/nexa_light"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_d_utilisateur"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:fontFamily="@font/nexabold"
                    android:textSize="@dimen/_10sdp"


                    />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:fontFamily="@font/nexa_light"
                    android:background="@drawable/bottom_input"
                    android:paddingHorizontal="@dimen/_8sdp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mot_de_passe"
                    android:layout_marginVertical="@dimen/_25sdp"
                    android:fontFamily="@font/nexabold"
                    android:textSize="@dimen/_10sdp"


                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/nexa_light"
                    android:background="@drawable/bottom_input"
                    android:paddingHorizontal="@dimen/_8sdp"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nextStepSecurity"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/bg_signin_btn"
                    android:text="@string/suivant"
                    android:fontFamily="@font/nexabold"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_25sdp"
                    />

            </LinearLayout>

    </RelativeLayout>

</FrameLayout>