<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".doctor.HomeFragment">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_240sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/ic_background_3"
        >



        <TextView
            android:id="@+id/welcomeDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bienvenu_docteur"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nexabold"
            android:textSize="@dimen/_20sdp"
            />
        <TextView
            android:id="@+id/label"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="wrap_content"
            android:text="@string/nous_esp_rons_que_vous_aurez_une_meilleure_exp_rience_avec_nous"
            android:layout_below="@+id/welcomeDoc"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nexa_light"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/blue"
            android:textAlignment="center"
            />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_150sdp"
       android:weightSum="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.8"

        >

        <LinearLayout
            android:id="@+id/goToProfile"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_30sdp"
            >


            <TextView
                android:id="@+id/profileNav"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_13sdp"
                android:fontFamily="@font/nexabold"
                android:text="@string/aller_ton_profil"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp"
                app:drawableStartCompat="@drawable/ic_baseline_arrow_left_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personnalisez_votre_profil_et_engagez_vous_pour_de_nouvelles_demandes"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:fontFamily="@font/nexa_light"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            />

        <LinearLayout
            android:id="@+id/startWork"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_120sdp"
            >


            <TextView
                android:id="@+id/workNav"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_13sdp"
                android:fontFamily="@font/nexabold"
                android:text="@string/allez_au_rendez_vous"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12ssp"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_right_24" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personnalisez_votre_profil_et_engagez_vous_pour_de_nouvelles_demandes"
                android:fontFamily="@font/nexa_light"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: Update blank fragment layout -->


</FrameLayout>