<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBack"
    tools:context=".doctor.DoctorPlanFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:src="@drawable/profile_icon_1"
            android:layout_margin="@dimen/_10sdp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_de_travail"
                android:textColor="@color/white"
                android:fontFamily="@font/nexabold"
                android:textSize="@dimen/_30ssp"
                />
            <ImageView
                android:id="@+id/patient_info"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/plan"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/plan_back_blue"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitez_vos_clients"
                android:textColor="@color/white"
                android:fontFamily="@font/nexabold"
                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:background="@drawable/ic_background_4"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            >

            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_50sdp"/>


            <ImageView
                android:id="@+id/calender"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/rooms_icon1"
                />
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_5sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textAlignment="center"
                android:text="@string/modifier_votre_calendrier"
                />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>