<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.FirstStepFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_40sdp"
                android:text="@string/je_suis_un_une"
                android:textColor="@color/blueBack"
                android:textSize="@dimen/_25ssp"
                android:fontFamily="@font/nexa_light"
                android:layout_marginBottom="@dimen/_10sdp"
                />

            <LinearLayout
                android:id="@+id/doctorNav"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_130sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/language_1"
                android:backgroundTint="@color/blueBack"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/doctor"


                    />

                <TextView
                    android:id="@+id/doctorNavLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/docteur"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/nexa_light"
                    android:textSize="@dimen/_22ssp" />


            </LinearLayout>




            <LinearLayout
                android:id="@+id/cabinetNav"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="@dimen/_130sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:background="@drawable/custom_background_transparent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/cabinet"
                    />

                <TextView
                    android:id="@+id/cabinetNavLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/cabinet"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/nexa_light"
                    android:textSize="@dimen/_22ssp" />


            </LinearLayout>


        </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextstep"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_130sdp"
        android:background="@drawable/langchoose"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"

        />
    </RelativeLayout>

</FrameLayout>